--- a/app/src/main/res/layout/activity_bcg.xml
+++ b/app/src/main/res/layout/activity_bcg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -38,6 +38,7 @@
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+
 
             <TextView
                 android:id="@+id/textView6"
@@ -178,9 +179,12 @@
 • Ao administrar dose adicional em contato de paciente de hanseníase, respeite o intervalo de seis meses da dose anterior;\n\n
 • Em gestante contato de indivíduo portador de hanseníase, a vacinação com BCG deve ser adiada para depois do parto;\n\n
 • A vacina pode ser administrada simultaneamente com as demais vacinas dos calendários de vacinação do Ministério da Saúde;\n\n
-** De acordo com a NOTA INFORMATIVA Nº 10/2019 do Ministério da Saúde, “o Programa Nacional de Imunização (PNI) NÃO indica a revacinação com BCG em crianças que não desenvolveram cicatriz após a vacinação indicada ao nascimento”.\n\n\n\n"
+• De acordo com a NOTA INFORMATIVA Nº 10/2019 do Ministério da Saúde, o Programa Nacional de Imunização (PNI) NÃO indica a revacinação com BCG em criaças que não desenvolveram cicatriz após a vacinação administrada ao nascer;\n\n\n\n "
                 android:textColor="@android:color/black" />
+
         </LinearLayout>
+
+
     </ScrollView>
 
-</androidx.constraintlayout.ConstraintLayout>
+</android.support.constraint.ConstraintLayout>
