--- a/app/src/main/res/layout/activity_sobre.xml
+++ b/app/src/main/res/layout/activity_sobre.xml
@@ -48,7 +48,7 @@
                 android:text="O aplicativo Calendário de Vacinação, foi desenvolvido visando atender à necessidade dos profissionais e estudantes das diversas áreas da saúde, sobre a atualização nas constantes melhorias do Programa Nacional de Imunização.\n\n
 Ele também serve de orientação para qualquer pessoa que busque ampliar seus conhecimentos acerca das vacinas disponibilizadas pelo Governo Federal, através das Unidades Básicas de Saúde distribuídas e todo o território brasileiro.\n\n
 Foi usado como fonte bibliográfica o Manual de Normas e Procedimentos para Vacinação do Ministério da Saúde – ano 2014, bem como as publicações e recomendações disponibilizadas no site do Ministério da Saúde.\n\n
-Atualizado em março de 2019."
+Atualizado em fevereiro de 2020."
                 android:textColor="@android:color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@ Atualizado em março de 2019."
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="Auxiliar de enfermagem, atuando no Programa de Saúde da Família do município de Aracaju/SE desde 2004.\n\n
-Atualmente, estudante de Analise e Desenvolvimento de Sistemas, e tendo como objetivo informatizar diversos processos de enfermagem, buscando facilitar e otimizar a prestação de serviços."
+Atualmente, estudante de Analise e Desenvolvimento de Sistemas, e tendo como objetivo informatizar diversos processos de enfermagem, buscando facilitar e otimizar a prestação de serviços.\n\n\n\n"
                 android:textColor="@android:color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -85,5 +85,16 @@ Atualmente, estudante de Analise e Desenvolvimento de Sistemas, e tendo como obj
         </LinearLayout>
     </ScrollView>
 
-
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        app:adSize="SMART_BANNER"
+        app:adUnitId="ca-app-pub-6122972364319881/3912590352"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
